--- a/templates/master.html
+++ b/templates/master.html
@@ -126,8 +126,7 @@
                             <li><a href="index.html" class="active">Home</a></li>
                             <li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                 <ul role="menu" class="sub-menu">
-                                    <li><a href="shop.html">Products</a></li>
-                                    <li><a href="product-details.html">Product Details</a></li>
+                                    <li><a href="{% url 'product' %}">Products</a></li>
                                     <li><a href="checkout.html">Checkout</a></li>
                                     <li><a href="cart.html">Cart</a></li>
                                     <li><a href="login.html">Login</a></li>
@@ -145,9 +144,11 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
+                    <form method="GET" action="/search/">
                     <div class="search_box pull-right">
-                        <input type="text" placeholder="Search"/>
+                        <input name="query" type="text" placeholder="Search"/>
                     </div>
+                        </form>
                 </div>
             </div>
         </div>
